Indicação em que página está

--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                                             style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 50%; height: 90%;">
                                             <div style="text-align: center;">
                                                 <p id="artist">RFM</p>
-                                                <p id="music">Popcorn Time</p>
+                                                <p id="music">Lazy Song</p>
                                             </div>
                                             <div
                                                 style="width: 80%; display: flex; flex-direction: column; align-items: center;">
@@ -281,47 +281,47 @@
                         <div class="v-line"></div>
                         <div class="navbar">
                             <a href="./index.html">
-                                <div class="menu">
+                                <div onclick="changePage(this)" class="menu" style="text-decoration: underline;">
                                     <img src="./img/down-info/home.svg" width="40px" alt="Home">
                                     <p class="app-name">Home</p>
                                 </div>
                             </a>
                             <a href="./phone.html">
-                                <div class="menu">
+                                <div onclick="changePage(this)" class="menu">
                                     <img src="./img/down-info/phone.svg" width="40px" alt="Phone">
                                     <p class="app-name">Phone</p>
                                 </div>
                             </a>
                             <a href="./music.html">
-                                <div class="menu">
+                                <div onclick="changePage(this)" class="menu">
                                     <img src="./img/down-info/radio.svg" width="40px" alt="Radio">
                                     <p class="app-name">Audio</p>
                                 </div>
                             </a>
 
                             <a href="./car.html">
-                                <div class="menu">
+                                <div onclick="changePage(this)" class="menu">
                                     <img src="./img/down-info/tesla.png" width="105px" alt="Car">
                                     <p class="app-name">Car Info</p>
                                 </div>
                             </a>
 
                             <a href="./doors.html">
-                                <div class="menu">
+                                <div onclick="changePage(this)" class="menu">
                                     <img src="./img/down-info/door.svg" width="40px" alt="Car">
                                     <p class="app-name">Doors</p>
                                 </div>
                             </a>
 
                             <a href="./maps.html">
-                                <div class="menu">
+                                <div onclick="changePage(this)" class="menu">
                                     <img src="./img/down-info/navigation.svg" width="40px" alt="Navigation">
                                     <p class="app-name">Navi</p>
                                 </div>
                             </a>
 
                             <a href="./apps.html">
-                                <div class="menu">
+                                <div onclick="changePage(this)" class="menu">
                                     <img src="./img/down-info/apps.svg" width="40px" alt="Apps">
                                     <p class="app-name">Apps</p>
                                 </div>
