--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="stylesheet" type="text/css" href="./css/maps.css">
     <link rel="shortcut icon" type="image/svg" href="./img/icon.svg" />
-    
+
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
@@ -71,28 +71,44 @@
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Bass</p>
-                    <input type="range" min="1" max="100" value="50" id="myRange">
+                    <div style="display: flex; align-items: center; justify-content: space-evenly;">
+                        <p class="range-controls">-</p>
+                        <input type="range" min="1" max="100" value="50" id="myRange">
+                        <p class="range-controls">+</p>
+                    </div>
 
                 </div>
 
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Treble</p>
-                    <input type="range" min="1" max="100" value="50" id="myRange">
+                    <div style="display: flex; align-items: center; justify-content: space-evenly;">
+                        <p class="range-controls">-</p>
+                        <input type="range" min="1" max="100" value="50" id="myRange">
+                        <p class="range-controls">+</p>
+                    </div>
 
                 </div>
 
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Balance</p>
-                    <input type="range" min="1" max="100" value="50" id="myRange">
+                    <div style="display: flex; align-items: center; justify-content: space-evenly;">
+                        <p class="range-controls">-</p>
+                        <input type="range" min="1" max="100" value="50" id="myRange">
+                        <p class="range-controls">+</p>
+                    </div>
 
                 </div>
 
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Volume</p>
-                    <input type="range" min="1" max="100" value="50" id="myRange">
+                    <div style="display: flex; align-items: center; justify-content: space-evenly;">
+                        <p class="range-controls">-</p>
+                        <input type="range" min="1" max="100" value="50" id="myRange">
+                        <p class="range-controls">+</p>
+                    </div>
 
                 </div>
             </div>
