--- a/music.html
+++ b/music.html
@@ -18,231 +18,52 @@
 
     <div class="container">
         <div class="top-info">
-            <div class="info">
-                <p id="hours" style="font-weight: bold;">19:20</p>
-                <p id="date" class="opacity-letters">Friday, 5 May 2020</p>
-                <p id="temperature" style="font-weight: bold;">22</p>
-                <p style="margin-left: 0;"" class=" opacity-letters">ºC</p>
-            </div>
-
-            <div class="info" style="justify-content: flex-end;">
-                <p id="music">RFM</p>
-                <div style="display: flex; align-items: center;" onclick="openSettings()">
-                    <img src="./img/top-info/wrench.png" width="60px" alt="Wrench">
-                </div>
-            </div>
-
-
         </div>
-        <div class="settings-modal box-fadein"></div>
-        <div class="air-modal box-fadein">
-            <div class="air-flex">
-                <div style="width: 100%; height: 25%;">
-                    <div style="display: flex; justify-content: space-between; width: 100%; align-items: flex-start;">
-                        <div style="width:57%; text-align: right;"">
-                        <h1>A/C</h1>
-                    </div>
-                    <div style=" width: 50px; height: 50px; display: flex; align-items: center; justify-content:
-                            center;" onclick=" openAir()">
-                            <img src=" ./img/down-info/air/close.svg" width="40px" alt="Wrench">
+
+        <div id="swup" class="content transition-fade" style="flex-direction: column ; align-items: center;">
+            <div style="height: 100%; width: 90%; display: flex; justify-content: space-between;">
+                <div class="box" style="height: 100%; width: 72.5%; display: flex;">
+                    <div style="height: 100%; width: 65%; display: flex; flex-direction: column; align-items: center;">
+                        <div style="height: 15%;"></div>
+                        <div style="width: 50%; height: 45%;">
+                            <img src="./img/music/radio/rfm.png" width="100%" height="100%">
                         </div>
+                        <div style="width: 100%; height: 35%;"></div>
+
                     </div>
-                    <div style="text-align: center;">
-                        <p class="big-weather">22ºC</p>
-                        <p class="little-weather">inside</p>
-                    </div>
+                    <div class="v-line" style="height: 95%;"></div>
+                    <div style="height: 100%; width: 35%;"></div>
                 </div>
-                <div style="width: 100%;height: 10%;display: flex; justify-content: space-around; align-items: center;">
-                    <div class="air-button">OFF</div>
-                    <div
-                        style="display: flex; flex-direction: column;width: 25%;height: 160%; align-items: center; justify-content: center;">
-                        <div class="air-button"
-                            style="width: 100%;height: 50%; display: flex; justify-content: space-between; align-items: center;">
-                            <div class="air-mini-button-mini-mini">
-                                <p>-</p>
-                            </div>
-                            <img src=" ./img/down-info/air/fan.svg" width="25px" style="filter: brightness(0)"
-                                alt="Fan">
-                            <div class="air-mini-button-mini-mini">+</div>
-                        </div>
-                    </div>
-                    <div class="air-button">AUTO</div>
-                </div>
-                <div
-                    style="width: 100%; height:50%; display: flex; align-items: center; justify-content: space-around;">
-                    <div class="air-mini-button" style="display: flex; align-items: center; justify-content: center;">
-                        <img src="./img/down-info/air/front-defroster.svg" width="40px" alt="Front Defroster">
-                    </div>
-                    <div class="air-button" style="transform: rotate(90deg); width: 30%; height: 20%;">
-                        <div
-                            style="display: flex; justify-content: space-between; align-items: center; width: 100%; height: 100%;">
-                            <div class="air-mini-button-mini" style="transform: rotate(-90deg);">+</div>
-                            <p class="big-weather" style="transform: rotate(-90deg);"">22</p>
-                            <div class=" air-mini-button-mini" style="transform: rotate(-90deg);"">-</div>
-                        </div>
-                    </div>
-                    <img src=" ./img/tesla-up.png" height="80%" alt="Car">
-                            <div class="air-button" style="transform: rotate(90deg); width: 30%; height: 20%;">
-                                <div
-                                    style="display: flex; justify-content: space-between; align-items: center; width: 100%; height: 100%;">
-                                    <div class="air-mini-button-mini" style="transform: rotate(-90deg);">+</div>
-                                    <p class="big-weather" style="transform: rotate(-90deg);"">22</p>
-                            <div class=" air-mini-button-mini" style="transform: rotate(-90deg);"">-</div>
-                        </div></div>
-                    <div class=" air-mini-button" style="display: flex; align-items: center; justify-content: center;">
-                                        <img src="./img/down-info/air/back-defroster.svg" width="30px"
-                                            alt="Back Defroster">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
 
-                    <div class="settings-modal">
-
-                    </div>
-
-                    <div id="swup" class="content transition-fade"
-                        style="flex-direction: column ; align-items: center;">
-                        <div style="height: 50%; width: 90%; display: flex; justify-content: space-between;">
-                            <div class="box" style="height: 95%; width: 45%; ">
-                                <div
-                                    style="height: 90%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: space-between;">
-                                    <img src="./img/music/bluetooth.svg" width=45%" alt="Radio">
-                                    <p class="little-car">PHONE</p>
-                                </div>
-                            </div>
-                            <div class="box" style="height: 95%; width: 45%;">
-                                <div
-                                    style="height: 90%; width: 90%; display: flex; flex-direction: column; align-items: center; justify-content: space-between;">
-                                    <img src="./img/music/radio.svg" width=45%" alt="Radio">
-                                    <p class="little-car">RADIO</p>
-                                </div>
-                            </div>
-
-                        </div>
-
-                        <div
-                            style="display: flex; flex-direction: column; justify-content: flex-end; height: 50%; width: 100%; align-items: center">
-                            <div class="box" style="height: 95%; width: 50%; ">
-                                <div class="music" style="display: flex;">
-                                    <div class="music-controls" id="m-controls" style="width: 93%">
-                                        <div
-                                            style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 43%; height: 90%;">
-                                            <div style="text-align: center;">
-                                                <p id="artist">RFM</p>
-                                                <p id="music">Popcorn Time</p>
-                                            </div>
-                                            <div
-                                                style="width: 90%; display: flex; flex-direction: column; align-items: center;">
-                                                <div id="mslider" style="margin-bottom: 20px;"></div>
-                                                <div style="display: flex; justify-content: space-around; width: 100%;">
-                                                    <img src="./img/music/controls/left.svg" width="55px"
-                                                        alt="Previous">
-                                                    <img src="./img/music/controls/pause.svg" width="55px" alt="Pause"
-                                                        onclick="triggerMusic()">
-                                                    <img src="./img/music/controls/right.svg" width="55px" alt="Next">
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                    </div>
-                                    <div class="slidecontainer"
-                                        style="width: 7%; display: flex;  flex-direction: column; justify-content: space-between; align-items: center;">
-                                        <img src="./img/music/controls/sound.svg" width="100%" height="20%">
-                                        <div class="slider-style" style="height: 80%;">
-                                            <input type="range" min="1" orient="vertical" max="100" value="50"
-                                                class="slider" id="myRange">
-                                        </div>
-                                    </div>
-
-
-                                </div>
-
-                            </div>
-                        </div>
-                    </div>
-                    <div class="down-info">
-                        <div class="air-conditioner" onclick="openAir()">
-                            <div class="air-box">
-                                <p id="airtemp">22ºC</p>
-                                <img src="./img/down-info/air/air.svg" width="40px" alt="Airconditioner">
-                            </div>
-                        </div>
-                        <div class="v-line"></div>
-                        <div class="navbar">
-                            <a href="./index.html" class="transition-fade">
-                                <div class="menu">
-                                    <img src="./img/down-info/home.svg" width="40px" alt="Home">
-                                    <p class="app-name">Home</p>
-                                </div>
-                            </a>
-                            <a href="./phone.html" class="transition-fade">
-                                <div class="menu">
-                                    <img src="./img/down-info/phone.svg" width="40px" alt="Phone">
-                                    <p class="app-name">Phone</p>
-                                </div>
-                            </a>
-                            <div class="menu">
-                                <img src="./img/down-info/radio.svg" width="40px" alt="Radio">
-                                <p class="app-name">Audio</p>
-                            </div>
-
-                            <a href="./car.html" class="transition-fade">
-                                <div class="menu">
-                                    <img src="./img/down-info/tesla.png" width="105px" alt="Car">
-                                    <p class="app-name">Car Info</p>
-                                </div>
-                            </a>
-
-                            <div class="menu">
-                                <img src="./img/down-info/door.svg" width="40px" alt="Car">
-                                <p class="app-name">Doors</p>
-                            </div>
-
-                            <a href="./maps.html" class="transition-fade">
-                                <div class="menu">
-                                    <img src="./img/down-info/navigation.svg" width="40px" alt="Navigation">
-                                    <p class="app-name">Navi</p>
-                                </div>
-                            </a>
-
-                            <div class="menu">
-                                <img src="./img/down-info/apps.svg" width="40px" alt="Apps">
-                                <p class="app-name">Apps</p>
-                            </div>
-                        </div>
-                        <div class="v-line"></div>
-                        <div class="heated-seats">
-                            <div style="display: flex; justify-content: space-between; width: 65%;">
-                                <div style="display: flex; flex-direction: column; align-items: center;">
-                                    <img src=" ./img/down-info/heated-seats/seat-left.png" width="40px"
-                                        alt="Driver Seat">
-
-                                </div>
-                                <div style="display: flex; flex-direction: column;align-items: center;">
-                                    <img src="./img/down-info/heated-seats/seat-right.png" width="40px"
-                                        alt="Passenger Seat">
-                                </div>
-                            </div>
-                            <p class="app-name" style="margin-top:3.5%">Heated Seats</p>
-                        </div>
-
-
-                    </div>
-
-
+                <div class="box"
+                    style="height: 100%; width: 22.5%; display: flex; flex-direction: column; justify-content: space-evenly;">
+                    <div class="settings-box">Radio</div>
+                    <div class="settings-box">Bluetooth</div>
+                    <div class="settings-box">Aux</div>
+                    <div class="settings-box">CD</div>
                 </div>
             </div>
-            <script src="node_modules/progressbar.js/dist/progressbar.js"></script>
-            <script src="node_modules/progressbar.js/dist/progressbar.min.js"></script>
-            <script src="./node_modules/swup/dist/swup.min.js"></script>
-            <script src="./node_modules/@swup/body-class-plugin/dist/SwupBodyClassPlugin.min.js"></script>
+        </div>
 
-            <script
-                src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
-                async defer></script>
-            <script type="text/javascript" src="./js/maps.js"></script>
-            <script type="text/javascript" src="./js/main.js"></script>
+        <div class="down-info">
+        </div>
+
+    </div>
+    </div>
+
+
+
+
+    <script src="node_modules/progressbar.js/dist/progressbar.js"></script>
+    <script src="node_modules/progressbar.js/dist/progressbar.min.js"></script>
+    <script src="./node_modules/swup/dist/swup.min.js"></script>
+    <script src="./node_modules/@swup/body-class-plugin/dist/SwupBodyClassPlugin.min.js"></script>
+
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
+        async defer></script>
+    <script type="text/javascript" src="./js/maps.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
 </html>
