--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Adjust Time</p>
-                    <input type="time" id="appt" name="appt" min="00:00" max="23:59" style="height:50%;"
+                    <input type="time" id="appt" style="border-radius: 9999em; text-align: center;" name="appt" min="00:00" max="23:59" style="height:50%;"
                         onchange="upTime(this)" required>
 
                 </div>
@@ -61,7 +61,7 @@
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Adjust Data</p>
-                    <input id="date" type="date" style="height:50%;" onchange="upDate(this)" required>
+                    <input id="date" type="date" style="border-radius: 9999em; text-align: center;" style="height:50%;" onchange="upDate(this)" required>
 
                 </div>
             </div>
@@ -375,6 +375,7 @@
                 async defer></script>
             <script type="text/javascript" src="./js/maps.js"></script>
             <script type="text/javascript" src="./js/phone.js"></script>
+            <script type="text/javascript" src="./js/music.js"></script>
             <script type="text/javascript" src="./js/main.js"></script>
 
 </html>
