--- a/music.html
+++ b/music.html
@@ -21,13 +21,13 @@
         </div>
 
         <div id="swup" class="content transition-fade" style="flex-direction: column ; align-items: center;">
-            <div style="height: 100%; width: 90%; display: flex; justify-content: space-between;">
+            <div style="height: 95%; width: 90%; display: flex; justify-content: space-between;">
                 <div class="box" style="height: 100%; width: 72.5%; display: flex;">
                     <div style="width: 65%; height: 100%; display: flex">
                         <div
                             style="height: 100%; width: 90%; display: flex; flex-direction: column; align-items: center;">
                             <div style="height: 15%; display: flex; align-items: center;">
-                                <input type="text" placeholder="Search...">
+                                <input id="pesquisam" type="text" onkeypress="change(this)" placeholder="Search...">
 
                             </div>
                             <div style="width: 50%; height: 40%;">
