Design música e phone atualizado

--- a/phone.html
+++ b/phone.html
@@ -29,14 +29,11 @@
                     <img src="./img/top-info/wrench.png" width="60px" alt="Wrench">
                 </div>
             </div>
-
-
         </div>
 
         <div id="swup" class="content transition-fade">
             <div id="callbox"
-                style="width: 25%; background-color: slateblue; overflow: auto; display: none; flex-direction: column; justify-content: center; align-items: center;"
-                class="box left"></div>
+                style="width: 25%; background-color: slateblue; overflow: auto; display: none; flex-direction: column; justify-content: center; align-items: center;" class="box left"></div>
             <div id="recentbox" style="width: 25%; background-color: slateblue; overflow: auto;"
                 class="box left recent"></div>
             <div id="numPad" style="display: none; width: 25%; background-color: slateblue;" class="left">
@@ -146,14 +143,12 @@
                     </div>
                     <div class="letterpad" id="letterpad">
                         <div class="row">
-                            <div style="border-top-left-radius: 5%;" class="button" onclick="showContacts(this)">A
-                            </div>
+                            <div style="border-top-left-radius: 5%;" class="button" onclick="showContacts(this)">A</div>
                             <div class="button" onclick="showContacts(this)">B</div>
                             <div class="button" onclick="showContacts(this)">C</div>
                             <div class="button" onclick="showContacts(this)">D</div>
                             <div class="button" onclick="showContacts(this)">E</div>
-                            <div style="border-top-right-radius: 5%;" class="button" onclick="showContacts(this)">F
-                            </div>
+                            <div style="border-top-right-radius: 5%;" class="button" onclick="showContacts(this)">F</div>
                         </div>
                         <div class="row">
                             <div class="button" onclick="showContacts(this)">G</div>
@@ -180,8 +175,7 @@
                             <div class="button" onclick="showContacts(this)">X</div>
                         </div>
                         <div class="row">
-                            <div style="border-bottom-left-radius: 5%;" class="button" class="button"
-                                onclick="showContacts(this)">Y</div>
+                            <div style="border-bottom-left-radius: 5%;" class="button" class="button" onclick="showContacts(this)">Y</div>
                             <div class="button" class="button" onclick="showContacts(this)">Z</div>
                             <div class="button"></div>
                             <div class="button"></div>
