--- a/music.html
+++ b/music.html
@@ -73,8 +73,8 @@
 
                 <div class="box"
                     style="height: 100%; width: 22.5%; display: flex; flex-direction: column; justify-content: space-evenly;">
-                    <div class="settings-box">Radio</div>
-                    <div class="settings-box">Bluetooth</div>
+                    <div class="settings-box" onclick="music()">Radio</div>
+                    <div class="settings-box" onclick="bluetooth()">Bluetooth</div>
                     <div class="settings-box">Aux</div>
                     <div class="settings-box">CD</div>
                 </div>
