Mudança das informações de música em todos os ecrãs

--- a/index.html
+++ b/index.html
@@ -53,15 +53,16 @@
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Adjust Time</p>
-                    <input type="time" id="appt" style="border-radius: 9999em; text-align: center;" name="appt" min="00:00" max="23:59" style="height:50%;"
-                        onchange="upTime(this)" required>
+                    <input type="time" id="appt" style="border-radius: 9999em; text-align: center;" name="appt"
+                        min="00:00" max="23:59" style="height:50%;" onchange="upTime(this)" required>
 
                 </div>
 
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Adjust Data</p>
-                    <input id="date" type="date" style="border-radius: 9999em; text-align: center;" style="height:50%;" onchange="upDate(this)" required>
+                    <input id="date" type="date" style="border-radius: 9999em; text-align: center;" style="height:50%;"
+                        onchange="upDate(this)" required>
 
                 </div>
             </div>
@@ -219,8 +220,8 @@
                                         <div
                                             style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 50%; height: 90%;">
                                             <div style="text-align: center;">
-                                                <p id="artist">RFM</p>
-                                                <p id="music">Lazy Song</p>
+                                                <p id="martist">RFM</p>
+                                                <p id="mname">Lazy Song</p>
                                             </div>
                                             <div
                                                 style="width: 80%; display: flex; flex-direction: column; align-items: center;">
@@ -228,8 +229,7 @@
                                                 <div style="display: flex; justify-content: space-around; width: 100%;">
                                                     <img src="./img/music/controls/left.svg" width="55px"
                                                         alt="Previous">
-                                                    <img src="./img/music/controls/pause.svg" width="55px" alt="Pause"
-                                                        onclick="triggerMusic()">
+                                                    <img src="./img/music/controls/pause.svg" width="55px" alt="Pause">
                                                     <img src="./img/music/controls/right.svg" width="55px" alt="Next">
                                                 </div>
                                             </div>
