--- a/music.html
+++ b/music.html
@@ -31,18 +31,17 @@
 
                             </div>
                             <div style="width: 50%; height: 40%;">
-                                <img src="./img/music/radio/rfm.png" width="100%" height="100%">
+                                <img id="malbum" src="./img/music/radio/rfm.png" width="100%" height="100%">
                             </div>
                             <div
                                 style="width: 100%; height: 35%; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly;">
-                                <h3>Música</h3>
-                                <p style="font-size:medium;">Artista</p>
+                                <h3 id="mname">Música</h3>
+                                <p id="martist" style="font-size:medium;">Artista</p>
                                 <div style="width: 65%; display: flex; flex-direction: column; align-items: center;">
                                     <div id="mslider" style="margin-bottom: 20px;"></div>
                                     <div style="display: flex; justify-content: space-around; width: 100%;">
                                         <img src="./img/music/controls/left.svg" width="55px" alt="Previous">
-                                        <img src="./img/music/controls/pause.svg" width="55px" alt="Pause"
-                                            onclick="triggerMusic()">
+                                        <img src="./img/music/controls/pause.svg" width="55px" alt="Pause">
                                         <img src="./img/music/controls/right.svg" width="55px" alt="Next">
                                     </div>
                                 </div>
@@ -63,8 +62,8 @@
                     <div class="v-line" style="height: 95%;"></div>
                     <div
                         style="height: 100%; width: 35%; display: flex; flex-direction: column; justify-content: center; align-items: center; overflow: hidden;">
-                        <div
-                            style="height: 90%; width: 90%; display: flex; flex-direction: column; align-items: center;overflow: scroll;" id="musics-inject">
+                        <div style="height: 90%; width: 90%; display: flex; flex-direction: column; align-items: center;overflow: scroll;"
+                            id="musics-inject">
 
 
                         </div>
