--- a/music.html
+++ b/music.html
@@ -41,7 +41,7 @@
                                     <div id="mslider" style="margin-bottom: 20px;"></div>
                                     <div style="display: flex; justify-content: space-around; width: 100%;">
                                         <img src="./img/music/controls/left.svg" width="55px" alt="Previous">
-                                        <img src="./img/music/controls/pause.svg" width="55px" alt="Pause">
+                                        <img id="changePlay" src="./img/music/controls/pause.svg" onclick="changePlay()"  width="55px" alt="Pause">
                                         <img src="./img/music/controls/right.svg" width="55px" alt="Next">
                                     </div>
                                 </div>
