Ajustes de Design

--- a/music.html
+++ b/music.html
@@ -35,10 +35,9 @@
                             </div>
                             <div
                                 style="width: 100%; height: 35%; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly;">
-                                <h3 id="mname">Música</h3>
+                                <h3 id="mname" style="margin-bottom: 0;">Música</h3>
                                 <p id="martist" style="font-size:medium;">Artista</p>
                                 <div style="width: 65%; display: flex; flex-direction: column; align-items: center;">
-                                    <div id="mslider" style="margin-bottom: 20px;"></div>
                                     <div style="display: flex; justify-content: space-around; width: 100%;">
                                         <img src="./img/music/controls/left.svg" width="55px" alt="Previous">
                                         <img id="changePlay" src="./img/music/controls/pause.svg" onclick="changePlay()"  width="55px" alt="Pause">
