--- a/index.html
+++ b/index.html
@@ -220,16 +220,16 @@
                                         <div
                                             style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 50%; height: 90%;">
                                             <div style="text-align: center;">
-                                                <p id="martist">RFM</p>
-                                                <p id="mname">Lazy Song</p>
+                                                <h3 id="mname" style="margin-top: 5px;"></h3>
+                                                <p id="martist"  style="margin-bottom: 4px;"></p>
                                             </div>
                                             <div
                                                 style="width: 80%; display: flex; flex-direction: column; align-items: center;">
                                                 <div style="display: flex; justify-content: space-around; width: 100%;">
-                                                    <img src="./img/music/controls/left.svg" width="55px"
+                                                    <img src="./img/music/controls/left.svg" onclick="previousMusic()" width="55px"
                                                         alt="Previous">
                                                     <img id="changePlay" src="./img/music/controls/pause.svg" onclick="changePlay()" width="55px" alt="Pause">
-                                                    <img src="./img/music/controls/right.svg" width="55px" alt="Next">
+                                                    <img src="./img/music/controls/right.svg" onclick="nextMusic()" width="55px" alt="Next">
                                                 </div>
                                             </div>
                                         </div>
