--- a/music.html
+++ b/music.html
@@ -35,13 +35,13 @@
                             </div>
                             <div
                                 style="width: 100%; height: 35%; display: flex; flex-direction: column; align-items: center; justify-content: space-evenly;">
-                                <h3 id="mname" style="margin-bottom: 0;">Música</h3>
-                                <p id="martist" style="font-size:medium;">Artista</p>
+                                <h3 id="mname" style="margin-bottom: 0; text-align: center;">Música</h3>
+                                <p id="martist" style="font-size:medium; text-align: center;">Artista</p>
                                 <div style="width: 65%; display: flex; flex-direction: column; align-items: center;">
                                     <div style="display: flex; justify-content: space-around; width: 100%;">
-                                        <img src="./img/music/controls/left.svg" width="55px" alt="Previous">
+                                        <img src="./img/music/controls/left.svg" onclick="previousMusic()" width="55px" alt="Previous">
                                         <img id="changePlay" src="./img/music/controls/pause.svg" onclick="changePlay()"  width="55px" alt="Pause">
-                                        <img src="./img/music/controls/right.svg" width="55px" alt="Next">
+                                        <img src="./img/music/controls/right.svg" onclick="nextMusic()" width="55px" alt="Next">
                                     </div>
                                 </div>
                             </div>
