--- a/index.html
+++ b/index.html
@@ -120,14 +120,11 @@
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px; display: none">
                     <p>iPhone of Sean</p>
                     <div class="bluetooth-box" onclick="connect(this)" id="bluetooth-connect">Connect</div>
-
                 </div>
                 <div id="iphone-connected"
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px; display: none">
                     <p>iPhone of Sean</p>
-                    <div class="bluetooth-box" onclick="connect(this)" style="background-color: #F2F3F4; color: black;">
-                        Connected</div>
-
+                    <div class="bluetooth-box connected" onclick="connect(this)">Connected</div>
                 </div>
             </div>
 
@@ -205,8 +202,19 @@
                         </div>
                     </div>
 
-                    <div class="settings-modal">
 
+
+                    <div class="warning-modal">
+                        <div
+                            style="height: 50%; width: 85%; display: flex; flex-direction: column-reverse; align-items: center;">
+                            <h3 style="text-transform: uppercase; text-align: center;" id="text-warning"></h3>
+                        </div>
+                        <div
+                            style="height: 35%; width:100%; display: flex; flex-direction: column-reverse; align-items: center;">
+                            <div class="settings-box" style="width: 25%; height: 35%;"
+                                onclick="document.getElementsByClassName('warning-modal')[0].style.display= 'none'">OK
+                            </div>
+                        </div>
                     </div>
 
                     <div id="swup" class="content transition-fade">
@@ -219,17 +227,19 @@
                                     <div class="music-controls" id="m-controls">
                                         <div
                                             style="display: flex; flex-direction: column;align-items: center; justify-content: space-between;width: 50%; height: 90%;">
-                                            <div style="text-align: center;">
-                                                <h3 id="mname" style="margin-top: 5px;"></h3>
-                                                <p id="martist"  style="margin-bottom: 4px;"></p>
+                                            <div style="text-align: center; margin-left: 10px;">
+                                                <h3 id="mname" style="margin-top: 5px; margin-bottom: 10px;"></h3>
+                                                <p id="martist" style="margin-bottom: 7.5px; margin-top: 0;"></p>
                                             </div>
                                             <div
                                                 style="width: 80%; display: flex; flex-direction: column; align-items: center;">
                                                 <div style="display: flex; justify-content: space-around; width: 100%;">
-                                                    <img src="./img/music/controls/left.svg" onclick="previousMusic()" width="55px"
-                                                        alt="Previous">
-                                                    <img id="changePlay" src="./img/music/controls/pause.svg" onclick="changePlay()" width="55px" alt="Pause">
-                                                    <img src="./img/music/controls/right.svg" onclick="nextMusic()" width="55px" alt="Next">
+                                                    <img src="./img/music/controls/left.svg" onclick="previousMusic()"
+                                                        width="55px" alt="Previous">
+                                                    <img id="changePlay" src="./img/music/controls/pause.svg"
+                                                        onclick="changePlay()" width="55px" alt="Pause">
+                                                    <img src="./img/music/controls/right.svg" onclick="nextMusic()"
+                                                        width="55px" alt="Next">
                                                 </div>
                                             </div>
                                         </div>
