--- a/music.html
+++ b/music.html
@@ -27,7 +27,7 @@
                         <div
                             style="height: 100%; width: 90%; display: flex; flex-direction: column; align-items: center;">
                             <div style="height: 15%; display: flex; align-items: center;">
-                                <input id="pesquisam" type="text" onkeypress="change(this)" placeholder="Search...">
+                                <input id="pesquisam" type="text" oninput="change(this)" placeholder="Search...">
 
                             </div>
                             <div style="width: 50%; height: 40%;">
@@ -49,10 +49,10 @@
                         </div>
                         <div class="slidecontainer"
                             style="width: 15%; display: flex;  flex-direction: column; justify-content: center; align-items: flex-start;">
-                            <img src="./img/music/controls/sound.svg" width="70%" height="20%">
+                            <img onclick="noVolume(this)" id="music-toggle" src="./img/music/controls/sound.svg" width="70%" height="20%">
                             <div class="slider-style" style="height:50%; width: 67.5%;">
-                                <input type="range" min="1" orient="vertical" max="100" value="50" class="slider"
-                                    id="myRange">
+                                <input type="range" oninput="volume(this)" min="1" orient="vertical" max="100" value="50" class="slider"
+                                    id="volume2">
                             </div>
                         </div>
 
@@ -71,10 +71,10 @@
 
                 <div class="box"
                     style="height: 100%; width: 22.5%; display: flex; flex-direction: column; justify-content: space-evenly;">
-                    <div class="settings-box" onclick="music()">Radio</div>
-                    <div class="settings-box" onclick="bluetooth()">Bluetooth</div>
-                    <div class="settings-box" onclick="showWarning('Please connect an Auxiliary device')">Aux</div>
-                    <div class="settings-box" onclick="showWarning('Please insert a CD')">CD</div>
+                    <div class="settings-box" style="height: 12%;" onclick="music()">Radio</div>
+                    <div class="settings-box" style="height: 12%;" onclick="bluetooth()">Bluetooth</div>
+                    <div class="settings-box" style="height: 12%;" onclick="showWarning('Please connect an Auxiliary device')">Aux</div>
+                    <div class="settings-box" style="height: 12%;" onclick="showWarning('Please insert a CD')">CD</div>
                 </div>
             </div>
         </div>
