Persistência das janelas

--- a/doors.html
+++ b/doors.html
@@ -33,8 +33,8 @@
                                 <div
                                     style="display: flex; flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 10%;">
                                     <p class="app-name" style="margin: 0; font-size: medium;">UP</p>
-                                    <input type="range" min="1" orient="vertical" max="100" value="100"
-                                        class="sliderdoors" id="myRange">
+                                    <input type="range" oninput="windows(this)" min="1" orient="vertical" max="100" value="100"
+                                        class="sliderdoors" id="janela1">
                                     <p class="app-name" style="margin: 0; font-size: medium;">DOWN</p>
                                 </div>
                                 <div class="item"
@@ -54,8 +54,8 @@
                                 <div
                                     style="display: flex; flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 10%;">
                                     <p class="app-name" style="margin: 0; font-size: medium;">UP</p>
-                                    <input type="range" min="1" orient="vertical" max="100" value="100"
-                                        class="sliderdoors" id="myRange">
+                                    <input type="range" oninput="windows(this)" min="1" orient="vertical" max="100" value="100"
+                                        class="sliderdoors" id="janela2">
                                     <p class="app-name" style="margin: 0; font-size: medium;">DOWN</p>
                                 </div>
                                 <div class="item"
@@ -90,7 +90,7 @@
                                     style="display: flex; flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 10%;">
                                     <p class="app-name" style="margin: 0; font-size: medium;">UP</p>
                                     <input type="range" min="1" orient="vertical" max="100" value="100"
-                                        class="sliderdoors" id="myRange">
+                                        class="sliderdoors" oninput="windows(this)" id="janela3">
                                     <p class="app-name" style="margin: 0; font-size: medium;">DOWN</p>
                                 </div>
                             </div>
@@ -108,8 +108,8 @@
                                 <div
                                     style="display: flex; flex-direction: column; justify-content: flex-start; align-items: center; margin-top: 10%;">
                                     <p class="app-name" style="margin: 0; font-size: medium;">UP</p>
-                                    <input type="range" min="1" orient="vertical" max="100" value="100"
-                                        class="sliderdoors" id="myRange">
+                                    <input type="range" min="1" oninput="windows(this)" orient="vertical" max="100" value="100"
+                                        class="sliderdoors" id="janela4">
                                     <p class="app-name" style="margin: 0; font-size: medium;">DOWN</p>
                                 </div>
                             </div>
