alguns testes no phone e maps

--- a/index.html
+++ b/index.html
@@ -53,16 +53,16 @@
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Adjust Time</p>
-                    <input type="time" id="appt" style="border-radius: 9999em; text-align: center; outline: none;" name="appt"
-                        min="00:00" max="23:59" style="height:50%;" onchange="upTime(this)" required>
+                    <input type="time" id="appt" style="border-radius: 9999em; text-align: center; outline: none;"
+                        name="appt" min="00:00" max="23:59" style="height:50%;" onchange="upTime(this)" required>
 
                 </div>
 
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Adjust Data</p>
-                    <input id="date" type="date" style="border-radius: 9999em; text-align: center; outline: none;" style="height:50%;"
-                        onchange="upDate(this)" required>
+                    <input id="date" type="date" style="border-radius: 9999em; text-align: center; outline: none;"
+                        style="height:50%;" onchange="upDate(this)" required>
 
                 </div>
             </div>
@@ -133,12 +133,13 @@
                 <div
                     style="width: 90%; height: 10%; display: flex; justify-content: space-between; align-items: center; margin-top: 25px;">
                     <p>Language</p>
-                    <select style="border-radius: 9999em; text-align: center; height: 50%; width: 40%; outline: none;" name="languages" id="languages">
+                    <select style="border-radius: 9999em; text-align: center; height: 50%; width: 40%; outline: none;"
+                        name="languages" id="languages">
                         <option value="english">English</option>
                         <option value="portugues">Português</option>
                         <option value="espanhol">Español</option>
                         <option value="frances">Français</option>
-                      </select>
+                    </select>
 
                 </div>
             </div>
