--- a/maps.html
+++ b/maps.html
@@ -23,7 +23,7 @@
     <script src="./node_modules/swup/dist/swup.min.js"></script>
     <script src="./node_modules/@swup/body-class-plugin/dist/SwupBodyClassPlugin.min.js"></script>
     <script
-        src="//maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ1LJWoi_zWZXbi4Oqzm3JwhHAqT-iBCU&libraries=places&callback=initAutocomplete"
         async defer></script>
     <script type="text/javascript" src="./js/maps.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
