--- a/phone.html
+++ b/phone.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" type="text/css" href="./css/phone.css">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <link rel="shortcut icon" type="image/svg" href="./img/icon.svg" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -20,16 +19,16 @@
 
         <div id="swup" class="content transition-fade">
             <div id="callbox"
-                style="width: 25%; background-color: slateblue; overflow: auto; display: none; flex-direction: column; justify-content: center; align-items: center;" class="box left"></div>
-            <div id="recentbox" style="width: 25%; background-color: slateblue; overflow: auto;"
+                style="width: 25%; background-color: #141448; overflow: auto; display: none; flex-direction: column; justify-content: center; align-items: center;" class="box left"></div>
+            <div id="recentbox" style="width: 25%; background-color: #141448; overflow: auto;"
                 class="box left recent"></div>
-            <div id="numPad" style="display: none; width: 25%; background-color: slateblue;" class="left">
+            <div id="numPad" style="display: none; width: 25%; background-color: #141448;" class="left">
                 <div class="numcontainer">
                     <div class="row" style="height: 100%; display: flex; justify-content: center; align-items: center;">
                         <div class="col-md-4 col-md-offset-4 phone">
                             <div class="row1">
                                 <div class="col-md-12">
-                                    <div style="margin-left: 10%; margin-right: 10%; width: 80%; height: 50px; background-color: #224397b9;"
+                                    <div style="margin-left: 10%; margin-right: 10%; width: 80%; height: 50px; background-color: #141448;"
                                         type="tel" name="name" id="telNumber" class="tel"></div>
                                     <div class="num-pad">
                                         <div class="span4">
@@ -109,7 +108,7 @@
                                                 </div>
                                             </div>
                                             <div class="span4">
-                                                <div class="num" style="background-color: slateblue;">
+                                                <div class="num" style="background-color: #01042A;">
                                                     <img src="./img/call.png" width="100%" height="100%"
                                                         onclick="makeCall()">
                                                 </div>
@@ -126,7 +125,7 @@
                 </div>
                 <div style="width: 60%;" class="right">
                     <div class="recent" id="contactbox"
-                        style="display: none; background-color: slateblue; height: 75%; border-radius: 5%; overflow: auto;">
+                        style="display: none; background-color: #01042A; height: 75%; border-radius: 5%; overflow: auto;">
                     </div>
                     <div class="letterpad" id="letterpad">
                         <div class="row">
