Bug fixes no phone

--- a/phone.html
+++ b/phone.html
@@ -27,7 +27,8 @@
                     style="width: 25%; background-color: #141448; overflow: auto; display: none; flex-direction: column; justify-content: center; align-items: center;"
                     class="box left"></div>
                 <div id="recentbox" style="width: 25%; background-color: #141448; overflow: auto; border-radius: 2.5%;"
-                    class="box left recent"></div>
+                    class="box left recent">
+                </div>
                 <div id="numPad" style="display: none; width: 25%; background-color: #141448;" class="left">
                     <div class="numcontainer">
                         <div class="row"
@@ -138,7 +139,8 @@
                             </div>
                             <div
                                 style="height: 100%; width: 15%; display: flex; flex-direction: column; align-items: center; justify-content: center;">
-                                <div onclick="showPad()" class="button" style="width: 100%; border-radius: 10%; height: 22.5%; display: flex; flex-direction: column; align-items: center; justify-content: center;">
+                                <div onclick="showPad()" class="button"
+                                    style="width: 100%; border-radius: 10%; height: 22.5%; display: flex; flex-direction: column; align-items: center; justify-content: center;">
                                     <img src="./img/back.svg" width="60%">
                                     <p style="font-size: small; margin: 0;">BACK</p>
                                 </div>
